--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
       <h2 class="optimization-header">Что такое оптимизация и зачем она нужна?</h2>
       <div class="optimization-text">
         На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из них совпадает
-        не только по категориям, но и по содержанию. 
+        не только по категориям, но и по содержанию.
         <br><br>
         Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или
         продается одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах.
@@ -72,13 +72,82 @@
         Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего
         10 позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для вывода
         вашего сайта на первую страницу поиска!
-         <br><br>
-        <span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые
+        <br><br>
+        <span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на
+          первые
           страницы, обходя всех конкурентов.</span>
       </div>
       <img src="img/woman_bg.png" alt="" class="optimization-img">
     </div>
   </section>
+  <section class="finish">
+    <div class="container">
+      <h2 class="finish-header">По окончании обучения Вы сможете!</h2>
+      <div class="finish-divider"></div>
+      <div class="finish-wrapper">
+        <div class="finish-item">
+          <div class="finish-round">
+            <img src="icons/finish_icon_1.png" alt="" class="finish-icon">
+          </div>
+          <div class="finish-descr">Создать свой сайт или блог</div>
+        </div>
+        <div class="finish-item">
+          <div class="finish-round">
+            <img src="icons/finish_icon_2.png" alt="" class="finish-icon">
+          </div>
+          <div class="finish-descr">Правильно его оптимизировать</div>
+        </div>
+        <div class="finish-item">
+          <div class="finish-round">
+            <img src="icons/finish_icon_3.png" alt="" class="finish-icon">
+          </div>
+          <div class="finish-descr">Обеспечить ему медленный, но верный рост в ТОП</div>
+        </div>
+        <div class="finish-item">
+          <div class="finish-round">
+            <img src="icons/finish_icon_4.png" alt="" class="finish-icon">
+          </div>
+          <div class="finish-descr">Достигнуть стабильного прироста посетителей</div>
+        </div>
+        <div class="finish-item">
+          <div class="finish-round">
+            <img src="icons/finish_icon_5.png" alt="" class="finish-icon">
+          </div>
+          <div class="finish-descr">Получать ощутимую прибыль</div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="gift">
+    <div class="container">
+      <div class="gift-img">
+        <img src="img/gift.png" alt="">
+      </div>
+      <div class="gift-text">
+        Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в
+        вебинарах и забирайте свой приз по окончании обучения!
+      </div>
+      <button class="promo-btn"> Записаться на интенсив </button>
+    </div>
+  </section>
+  <section class="vebinar">
+    <div class="container">
+      <div class="vebinar-img">
+        <img src="img/first.png" alt="">
+      </div>
+      <h1>Первый вебинар состоится:</h1>
+      <span class="time">
+        10 сентября в 20:00 по Москве
+      </span>
+      <div class="vebinar-text">Успейте записаться, количество мест ограничено!</div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="links"><a href="#">Служба поддержки</a> | <a href="#">Политика конфиденциальности</a> </div>
+      <div class="footer-text">Позвоните нам 8-800-555-01-21</div>
+    </div>
+  </footer>
 </body>
 
 </html>
