--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordpress интенсив</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+    
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <section class="promo">
+  <header class="promo">
     <div class="container">
       <div class="logo">
         <img src="icons/logo.png" alt="" class="logo_img">
@@ -34,7 +40,7 @@
         <img src="icons/down.png" alt="" class="more-img">
       </div>
     </div>
-  </section>
+  </header>
   <section class="waiting">
     <div class="container">
       <h2 class="waiting-header">Что Вас ждет в нашем интенсиве?</h2>
